Fix spacing around third-level items in the sidebar
Closes #1731

--- a/app/assets/stylesheets/sidebar.sass
+++ b/app/assets/stylesheets/sidebar.sass
@@ -75,6 +75,9 @@
         margin: 0 0 0 20px
         span.bullet
           float: left
+          margin-top: 3px
+          padding-right: 5px
         span.title
           font-size: 12px
-          padding-left: 0
+          padding: 1px 0
+          height: 17px
